--- a/my-banking-frontend/index.html
+++ b/my-banking-frontend/index.html
@@ -25,6 +25,11 @@
           </div>
           <button type="submit" class="btn btn-primary w-100">Login</button>
           <p class="mt-2 text-center">Don't have an account? <a href="register.html">Register</a></p>
+
+          <div>
+            <button id="googleLoginBtn">Sign in with Google</button>
+
+          </div>
         </form>
       </div>
     </div>
