--- a/my-banking-frontend/accounts.html
+++ b/my-banking-frontend/accounts.html
@@ -1,51 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accounts</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8"> <!-- metadata -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive -->
+  <title>Accounts</title> <!-- title -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap -->
+  <link href="css/accounts.css" rel="stylesheet"> <!-- page stylesheet -->
 </head>
 <body class="bg-light">
 
-<div class="container mt-5">
-  <h2 class="mb-4">Your Accounts</h2>
-
-  <!-- Accounts Table -->
-  <table class="table table-striped" id="accountsTable">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Owner</th>
-        <th>Balance</th>
-        <th>Currency</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <!-- Create Account Form -->
-  <h4 class="mt-5">Create New Account</h4>
-  <form id="createAccountForm">
-    <div class="mb-3">
-      <label class="form-label">Currency</label>
-      <input type="text" id="currency" class="form-control" placeholder="e.g. USD, EUR" required>
+  <header class="fx-header py-3">
+    <div class="container d-flex align-items-center justify-content-between">
+      <h1 class="h4 mb-0 fx-title">Your Accounts</h1>
+      <a href="transaction.html" class="btn btn-primary d-none d-sm-inline-flex">Make Transaction</a>
     </div>
-    <div class="mb-3">
-      <label class="form-label">Initial Balance</label>
-      <input type="number" id="balance" class="form-control" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Owner name</label>
-      <input type="text" id="owner" class="form-control" required>
-    </div>
-    <button type="submit" class="btn btn-success">Create Account</button>
-  </form>
+  </header>
 
-  <a href="transaction.html" class="btn btn-primary mt-3">Make Transaction</a>
-</div>
+  <main class="container my-4 my-lg-5">
+    <!-- Glass card: Accounts table -->
+    <section class="fx-card p-3 p-md-4 mb-4 mb-lg-5">
+      <div class="d-flex align-items-center justify-content-between gap-2 mb-3">
+        <h2 class="h5 mb-0">Accounts</h2>
+        <div class="d-flex flex-wrap align-items-center gap-2">
+          <div class="input-group input-group-sm" style="max-width: 260px;">
+            <span class="input-group-text">Search</span>
+            <input type="search" id="acctSearch" class="form-control" placeholder="ID, owner, status">
+          </div>
+          <button id="exportCsvBtn" class="btn btn-soft btn-sm">Export CSV</button>
+        </div>
+      </div>
 
-<script src="js/accounts.js"></script>
+      <div class="table-responsive"> <!-- responsive wrapper -->
+        <table class="table table-hover align-middle mb-0" id="accountsTable">
+          <thead class="table-light">
+            <tr>
+              <th>ID</th>
+              <th>Owner</th>
+              <th class="text-end">Balance</th>
+              <th>Currency</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody><!-- filled by JS --></tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- Glass card: Create Account form -->
+    <section class="fx-card p-3 p-md-4">
+      <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
+        <h3 class="h5 mb-0">Create New Account</h3>
+        <a href="transaction.html" class="btn btn-primary d-sm-none">Make Transaction</a>
+      </div>
+
+      <form id="createAccountForm" class="row g-3">
+        <div class="col-12 col-md-4">
+          <label class="form-label">Currency</label>
+          <div class="input-group">
+            <span class="input-group-text">ISO</span>
+            <input type="text" id="currency" class="form-control" placeholder="e.g. USD, EUR" required>
+          </div>
+          <div class="form-text">Use 3-letter ISO code like USD or EUR.</div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <label class="form-label">Initial Balance</label>
+          <div class="input-group">
+            <span class="input-group-text">₹</span>
+            <input type="number" id="balance" class="form-control" min="0" step="0.01" required>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <label class="form-label">Owner name</label>
+          <input type="text" id="owner" class="form-control" placeholder="Account holder" required>
+        </div>
+
+        <div class="col-12 d-flex gap-2">
+          <button type="submit" class="btn btn-success">Create Account</button>
+          <button type="reset" class="btn btn-outline-secondary">Reset</button>
+        </div>
+      </form>
+    </section>
+  </main>
+
+  <script src="js/accounts.js"></script> <!-- logic -->
 </body>
 </html>
